--- a/src/app/home/b2b-flows-manage/node-properties/data-transform/data-creator/data-creator.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/data-transform/data-creator/data-creator.component.html
@@ -7,7 +7,7 @@
 
 <div [ngClass]="{'show':configureWindow}" class="configure-window border-left position-fixed bg-white p-4">
     <div class="d-flex align-items-center justify-content-between mb-4">
-        <span class="fw-600 font-20">Data Configure</span>
+        <span class="fw-600 font-20">Configure Data</span>
         <span class="dsi dsi-close hover" (click)="cancel()"></span>
     </div>
     <div *ngIf="configureWindow" class="d-flex align-items-start">
