--- a/src/app/home/b2b-flows-manage/node-properties/node-mapping/formula-editor/formula-editor.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/node-mapping/formula-editor/formula-editor.component.html
@@ -1,20 +1,80 @@
-<div class="formula-builder h-100 w-100 bg-white">
-    <div class="sub-header d-flex align-items-start justify-content-between px-3 pt-3">
-        <div class="d-flex align-items-center font-20 fw-600">
-            <span class="text-dark mr-2">Formula for:</span>
-            <span class="text-primary">{{definition.dataPath}}</span>
+<div class="configure-window border-left position-fixed bg-white p-4">
+    <div class="d-flex align-items-center justify-content-between mb-4">
+        <span class="fw-600 font-20">Configure Data</span>
+        <span class="dsi dsi-close hover" (click)="cancel()"></span>
+    </div>
+    <div class="d-flex align-items-start">
+        <div class="content-creator mr-3 w-100">
+            <div class="mb-3">
+                <div class="p-2 font-13 border rounded">
+                    <span class="text-dark fw-500 mr-2">Target:</span>
+                    <span class="text-secondary">{{field.name}}</span>
+                </div>
+            </div>
+            <!-- <textarea class="input-height form-control" [disabled]="disabled" cols="30" rows="15" [(ngModel)]="tempData"
+                odpAutoFocus>
+            </textarea> -->
+            <div class="input-height form-control" odpEditor [(data)]="tempData" [insertText]="insertText"></div>
+            <button type="button" class="btn btn-primary mt-3 w-100" (click)="done()">Done</button>
         </div>
-        <button type="button" class="btn btn-link text-dark" (click)="close(false)">
-            <span class="dsi dsi-close fw-500"></span>
-        </button>
-    </div>
-    <div *ngIf="definition.source && definition.source.length>0" class="d-flex flex-column px-3 text-secondary mb-3">
-        <span *ngFor="let item of definition.source;let sourceIndex=index" class="font-13 fw-400">Use
-            <i>{{item.dataPath}}</i> as <span class="fw-500">input{{sourceIndex+1}}</span>
-        </span>
-    </div>
-    <div class="code-editor px-3">
-        <odp-code-editor [edit]="edit" [(code)]="definition.formula"></odp-code-editor>
-        <!-- <textarea class="code-editor form-control" [(ngModel)]="definition.formula">{{baseCode}}</textarea> -->
+        <div class="suggestion-list-wrapper">
+            <div class="mb-3">
+                <odp-search-box [open]="true" [fullWidth]="true" [selectOnEnter]="true"
+                    (enteredText)="searchTerm=$event" (reset)="searchTerm=null">
+                </odp-search-box>
+            </div>
+            <div class="border rounded">
+                <div class="border-bottom">
+                    <span class="text-muted form-text p-2">Available Methods</span>
+                </div>
+                <div class="suggestion-list">
+                    <div class="list-group list-group-flush">
+                        <div *ngFor="let item of availableMethods|commonFilter:'name':searchTerm"
+                            class="list-group-item font-12 d-flex align-items-center justify-content-start">
+                            <span class="dsi dsi-plus-circle hover text-dark mr-2" (click)="placeMethod(item)"></span>
+                            <div class="d-flex align-items-center">
+                                <span class="name text-accent fw-500">{{item.name}}</span>(
+                                <ng-container *ngFor="let p of item.params;let lp=last">
+                                    <span class="text-success" *ngIf="p.type == 'String'">"{{p.name}}"</span>
+                                    <span class="text-warning" *ngIf="p.type == 'Number'">{{p.name}}</span>
+                                    <span class="text-info" *ngIf="p.type == 'Boolean'">{{p.name}}</span>
+                                    <span class="text-grey" *ngIf="p.type == 'Object'">{{'{ '+p.name+' }'}}</span>
+                                    <span class="text-grey" *ngIf="p.type == 'Array'">{{'[ '+p.name+' ]'}}</span>
+                                    <span *ngIf="!lp">,&nbsp;</span>
+                                </ng-container>
+                                )
+                            </div>
+                        </div>
+                        <div *ngIf="(availableMethods|commonFilter:'name':searchTerm).length==0"
+                            class="list-group-item d-flex align-items-center justify-content-between">
+                            <span class="text-muted">No Match Found</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="border-bottom border-top">
+                    <span class="text-muted form-text p-2">Available Variables</span>
+                </div>
+                <div class="suggestion-list">
+                    <div class="list-group list-group-flush">
+                        <div *ngFor="let item of variableSuggestions|commonFilter:'label':searchTerm"
+                            class="list-group-item d-flex align-items-center justify-content-between">
+                            <div class="d-flex align-items-center">
+                                <span class="dsi dsi-plus-circle hover text-accent mr-2"
+                                    (click)="placeValue(item)"></span>
+                                <span class="bg-light text-grey mr-1 font-10 p-1 rounded">{{item.nodeId}}</span>
+                                <ng-container *ngFor="let l of getLableAsArray(item.label);let lf=first;let ll=last">
+                                    <span class="text" [ngClass]="{'text-success':lf}">{{l}}</span>
+                                    <span *ngIf="!ll">/</span>
+                                </ng-container>
+                            </div>
+                        </div>
+                        <div *ngIf="(variableSuggestions|commonFilter:'label':searchTerm).length==0"
+                            class="list-group-item d-flex align-items-center justify-content-between">
+                            <span class="text-muted">No Match Found</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
