--- a/src/app/home/b2b-flows-manage/node-properties/data-service-properties/data-service-properties.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/data-service-properties/data-service-properties.component.html
@@ -140,7 +140,7 @@
         </div>
     </ng-container>
     <div class="border rounded p-3">
-        <div class="border-bottom font-14 fw-500 mb-3 pb-1">Advance Settings</div>
+        <div class="border-bottom font-14 fw-500 mb-3 pb-1">Advanced Settings</div>
         <div class="form-group position-relative">
             <label class="font-14 fw-400 text-dark" for="requestTimeout">Timeout (sec)</label>
             <input id="requestTimeout" class="form-control" type="number" [(ngModel)]="currNode.options.timeout">
