--- a/src/app/home/agents/agents.component.html
+++ b/src/app/home/agents/agents.component.html
@@ -141,7 +141,7 @@
     class="new-data-format-window position-fixed p-4 d-flex flex-column align-items-center bg-white border-left">
     <div class="d-flex align-items-center justify-content-between w-100">
         <span class="font-20 fw-600">{{agentData.isEdit?'Edit':'Create new'}} App Agent</span>
-        <button type="button" class="btn btn-link text-dark" (click)="showNewAgentWindow=false">
+        <button type="button" class="btn btn-link text-dark" (click)="showNewAgentWindow=false;isClone=false">
             <span class="dsi dsi-close"></span>
         </button>
     </div>
