Forget everything, this one is the real deal

--- a/src/app/home/b2b-flows-manage/path-properties/path-condition-creator/path-condition-creator.component.html
+++ b/src/app/home/b2b-flows-manage/path-properties/path-condition-creator/path-condition-creator.component.html
@@ -43,7 +43,8 @@
                 (selectItem)="selectItem($event)" (keyup.enter)="createSegment($event)" odpAutoFocus>
 
         </div>
-        <odp-styled-text [suggestions]="variableSuggestions" (value)="test($event)"></odp-styled-text>
+        <odp-styled-text [suggestions]="variableSuggestions" (value)="test($event)" #typeAhead [ngbTypeahead]="search"
+            [resultFormatter]="formatter" [inputFormatter]="formatter"></odp-styled-text>
         <button type="button" class="btn btn-primary d-flex align-items-center mt-4 w-100 justify-content-center"
             (click)="save()">
             <span class="">Done</span>
