--- a/src/app/home/b2b-flows-manage/node-properties/node-properties.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/node-properties.component.html
@@ -5,6 +5,9 @@
             <span class="rounded p-1 bg-light font-10 mt-1 border">{{currNode?._id}}</span>
         </div>
         <div class="d-flex">
+            <button *ngIf="!edit.status" type="button" class="btn btn-link" (click)="enableEditing()">
+                <span class="dsi dsi-edit text-info"></span>
+            </button>
             <button *ngIf="!isInputNode" type="button" class="btn btn-link" (click)="deleteNode()">
                 <span class="dsi dsi-trash text-danger"></span>
             </button>
@@ -18,8 +21,10 @@
 <div class="p-4">
     <div class="form-group">
         <label class="font-14 fw-400 text-dark" for="nodeName">Node Name</label>
-        <input id="nodeName" type="text" class="form-control" [(ngModel)]="currNode.name"
-            (ngModelChange)="changesDone.emit()">
+        <odp-change-on-edit id="nodeName" [(ngModel)]="currNode.name" (ngModelChange)="nodeNameChanged($event)" (ngModelChange)="changesDone.emit()"
+            (tempValue)="checkNameForUnique($event)" [errorMessage]="nodeNameErrorMessage"></odp-change-on-edit>
+        <!-- <input id="nodeName" type="text" class="form-control" [(ngModel)]="currNode.name"
+            (ngModelChange)="changesDone.emit()" odpChangeOnEdit> -->
     </div>
     <div class="form-group" *ngIf="currNode?.type!='ERROR'">
         <label class="font-14 fw-400 text-dark" for="nodeType">Node Type</label>
