DS-339, DS-341, DS-343 and DS-345 is fixed
@jugnu-appveen

--- a/src/app/home/agents/agents.component.html
+++ b/src/app/home/agents/agents.component.html
@@ -116,7 +116,7 @@
                                     Change Password
                                 </div>
                                 <div id="agent-clone" class="list-group-item list-group-item-action py-2 border-0 hover"
-                                    *ngIf="hasManagePermission('AGENT')" (click)="cloneAgent(i)">
+                                    *ngIf="hasManagePermission('AGENT')" (click)="cloneAgent(agent)">
                                     Clone
                                 </div>
                                 <div id="agent-delete"
