--- a/src/app/home/b2b-flows/b2b-flows.component.html
+++ b/src/app/home/b2b-flows/b2b-flows.component.html
@@ -128,7 +128,7 @@
                                     *ngIf="item.draftVersion || item.status=='Draft' && canManageFlow(item._id)" (click)="discardDraft(item._id)">Discard
                                     Draft</button>
                                 <div class="list-group-item list-group-item-action py-2 border-0 text-danger"
-                                    *ngIf="canManageFlow(item._id)" (click)="deleteFlow(item,i)">
+                                    *ngIf="canManageFlow(item._id)" (click)="deleteFlow(i)">
                                     Delete
                                 </div>
                                 <div class="list-group-item list-group-item-action py-2 text-accent"
